manifests/express.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lowmidgirl
  name: express
  namespace: 6ow3idgirl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lowmidgirl
  strategy: {}
  template:
    metadata:
      labels:
        app: lowmidgirl
    spec:
      containers:
      # TODO: need to replace SHA instead of latest tag
      - image: ghcr.io/hwakabh/6ow3idgirl:latest
        imagePullPolicy: Always
        name: express
        # envFrom:
        #   - secretRef:
        #       name: app-secret
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 3000
        #   initialDelaySeconds: 20
        #   periodSeconds: 60
        #   successThreshold: 1
        #   failureThreshold: 3
        #   timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lowmidgirl
  name: express
  namespace: 6ow3idgirl
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: lowmidgirl
  type: ClusterIP
